--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,31 +1,112 @@
 [versions]
-agp = "8.4.2"
-kotlin = "1.9.0"
-coreKtx = "1.13.1"
-junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.8.2"
-activityCompose = "1.9.0"
-composeBom = "2023.08.00"
+agp                                     = "8.4.2"
+kotlin                                  = "2.0.0"
+coreKtx                                 = "1.13.1"
+navigation                              = "2.7.7"
+hilt                                    = "2.51.1"
+androidxHiltNavigationCompose           = "1.2.0"
+
+junit                                   = "4.13.2"
+junitVersion                            = "1.1.5"
+espressoCore                            = "3.5.1"
+mockitoKotlin                           = "5.2.1"
+androidArchCoreTest                     = "1.1.1"
+turbineTesting                          = "0.11.0"
+coroutineTesting                        = "1.6.1"
+ioMockk                                 = "1.13.4"
+
+lifecycleRuntimeKtx                     = "2.8.2"
+activityCompose                         = "1.9.0"
+composeBom                              = "2024.06.00"
+roomVersion                             = "2.6.1"
+ksp                                     = "2.0.0-1.0.21"
+kotlinxSerializationJson                = "1.6.3"
+datastorePreferences                    = "1.1.1"
+
+retrofit                                = "2.11.0"
+okhttp                                  = "4.12.0"
+
+timber                                  = "5.0.1"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+# Test
+junit                                   = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-junit                          = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-espresso-core                  = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+mockito-kotlin                          = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
+android-arch-core-testing               = { group = "android.arch.core", name = "core-testing", version.ref = "androidArchCoreTest" }
+turbine-testing                         = { group = "app.cash.turbine", name = "turbine", version.ref = "turbineTesting" }
+coroutines-test                         = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutineTesting" }
+io-mockk                                = { group = "io.mockk", name = "mockk", version.ref = "ioMockk" }
+
+# Test - Compose
+androidx-compose-ui-test-manifest       = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+androidx-ui-test-junit4                 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+
+# Core
+androidx-core-ktx                       = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-lifecycle-runtime-ktx          = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
+
+kotlinx-serialization-json              = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+
+datastore-preferences                   = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
+
+# Lifecycle
+lifecycle-runtime-compose               = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
+lifecycle-viewModel-ktx                 = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleRuntimeKtx" }
+lifecycle-viewModel-compose             = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
+
+# Compose
+androidx-activity-compose               = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-compose-bom                    = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-compose-runtime                = { group = "androidx.compose.runtime", name = "runtime" }
+androidx-compose-ui                     = { group = "androidx.compose.ui", name = "ui" }
+androidx-compose-ui-graphics            = { group = "androidx.compose.ui", name = "ui-graphics" }
+androidx-compose-ui-tooling             = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-ui-tooling-preview     = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-compose-material3              = { group = "androidx.compose.material3", name = "material3" }
+
+# Room
+room                                    = { group = "androidx.room", name = "room-runtime", version.ref = "roomVersion" }
+room-compiler                           = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
+room-ktx                                = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
+
+# Networking
+retrofit                                = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-gson                           = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
+retrofit-moshi                          = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
+retrofit-scalars                        = { group = "com.squareup.retrofit2", name = "converter-scalars", version.ref = "retrofit" }
+http-logging-interceptor                = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp"}
+
+# Compose - Navigation
+navigation-compose                      = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+
+# DI - Hilt
+hilt-android                            = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
+hilt-android-compiler                   = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-navigation-compose                 = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
+
+# Logging
+timber                                  = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+
+# Dependencies of the included build-logic
+android-gradlePlugin                    = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+kotlin-gradlePlugin                     = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+androidApplication                      = { id = "com.android.application", version.ref = "agp" }
+androidLibrary                          = { id = "com.android.library", version.ref = "agp" }
+jetbrainsKotlinAndroid                  = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+compose-compiler                        = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+hiltPlugin                              = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+ksp                                     = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-serialization                    = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
+# Plugins defined by this project
+convertmate-android-application         = { id = "todotrek.android.application", version = "unspecified" }
+convertmate-android-application-compose = { id = "todotrek.android.application.compose", version = "unspecified" }
+convertmate-android-library             = { id = "todotrek.android.library", version = "unspecified" }
+convertmate-android-library-compose     = { id = "todotrek.android.library.compose", version = "unspecified" }
+convertmate-android-hilt                = { id = "todotrek.android.hilt", version = "unspecified" }
+convertmate-android-feature             = { id = "todotrek.android.feature", version = "unspecified" }
+# End
